improve systemModulesFinder guest patch