@@ -24,6 +24,8 @@
 package com.oracle.truffle.espresso.substitutions;
 
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.function.Function;
 
 import org.graalvm.home.HomeFinder;
 
@@ -32,10 +34,13 @@ import com.oracle.truffle.api.nodes.DirectCallNode;
 import com.oracle.truffle.espresso.EspressoLanguage;
 import com.oracle.truffle.espresso.meta.Meta;
 import com.oracle.truffle.espresso.runtime.StaticObject;
-import com.oracle.truffle.espresso.vm.InterpreterToVM;
 
 @EspressoSubstitutions
 public class Target_jdk_internal_module_SystemModuleFinders {
+
+    private static final ModuleExtension[] ESPRESSO_EXTENSION_MODULES = new ModuleExtension[]{
+                    new ModuleExtension("hotswap.jar", (meta) -> meta.getContext().JDWPOptions != null),
+                    new ModuleExtension("polyglot.jar", (meta) -> meta.getContext().Polyglot)};
 
     @TruffleBoundary
     @Substitution
@@ -46,13 +51,9 @@ public class Target_jdk_internal_module_SystemModuleFinders {
         // construct a ModuleFinder that can locate our Espresso-specific platform modules
         // and compose it with the resulting module finder from the original call
         StaticObject moduleFinder = (StaticObject) original.call(systemModules);
-        if (meta.getContext().JDWPOptions != null) {
-            StaticObject hotSwapPath = getEspressoModulePath(meta, "hotswap.jar");
-            moduleFinder = extendModuleFinders(meta, moduleFinder, hotSwapPath);
-        }
-        if (meta.getContext().Polyglot) {
-            StaticObject polyglotPath = getEspressoModulePath(meta, "polyglot.jar");
-            moduleFinder = extendModuleFinders(meta, moduleFinder, polyglotPath);
+        StaticObject extensionPathArray = getEspressoExtensionPaths(meta);
+        if (extensionPathArray != StaticObject.NULL) {
+            moduleFinder = extendModuleFinders(meta, moduleFinder, extensionPathArray);
         }
         return moduleFinder;
     }
@@ -65,27 +66,38 @@ public class Target_jdk_internal_module_SystemModuleFinders {
         // construct ModuleFinders that can locate our Espresso-specific platform modules
         // and compose it with the resulting module finder from the original call
         StaticObject moduleFinder = (StaticObject) original.call();
-        if (meta.getContext().JDWPOptions != null) {
-            StaticObject hotSwapPath = getEspressoModulePath(meta, "hotswap.jar");
-            moduleFinder = extendModuleFinders(meta, moduleFinder, hotSwapPath);
+        StaticObject extensionPathArray = getEspressoExtensionPaths(meta);
+        if (extensionPathArray != StaticObject.NULL) {
+            moduleFinder = extendModuleFinders(meta, moduleFinder, extensionPathArray);
         }
-        if (meta.getContext().Polyglot) {
-            StaticObject polyglotPath = getEspressoModulePath(meta, "polyglot.jar");
-            moduleFinder = extendModuleFinders(meta, moduleFinder, polyglotPath);
-        }
-
         return moduleFinder;
     }
 
-    private static StaticObject extendModuleFinders(Meta meta, StaticObject moduleFinder, StaticObject hotSwapPath) {
-        StaticObject pathArray = meta.java_nio_file_Path.allocateReferenceArray(1);
-        StaticObject[] unwrapped = pathArray.unwrap();
-        unwrapped[0] = hotSwapPath;
-        // ModuleFinder extension = ModulePath.of(hotswapPath);
+    private static StaticObject getEspressoExtensionPaths(Meta meta) {
+        ArrayList<StaticObject> extensionPaths = new ArrayList<>(2);
+        for (ModuleExtension extension : ESPRESSO_EXTENSION_MODULES) {
+            if (extension.isEnabled.apply(meta)) {
+                extensionPaths.add(getEspressoModulePath(meta, extension.name));
+            }
+        }
+        if (!extensionPaths.isEmpty()) {
+            StaticObject pathArray = meta.java_nio_file_Path.allocateReferenceArray(extensionPaths.size());
+            StaticObject[] array = pathArray.unwrap();
+            for (int i = 0; i < array.length; i++) {
+                array[i] = extensionPaths.get(i);
+            }
+            return pathArray;
+        } else {
+            return StaticObject.NULL;
+        }
+    }
+
+    private static StaticObject extendModuleFinders(Meta meta, StaticObject moduleFinder, StaticObject pathArray) {
+        // ModuleFinder extension = ModulePath.of(pathArray);
         // moduleFinder = ModuleFinder.compose(extension, moduleFinder);
         StaticObject extension = (StaticObject) meta.jdk_internal_module_ModulePath_of.invokeDirect(StaticObject.NULL, pathArray);
         StaticObject moduleFinderArray = meta.java_lang_module_ModuleFinder.allocateReferenceArray(2);
-        unwrapped = moduleFinderArray.unwrap();
+        StaticObject[] unwrapped = moduleFinderArray.unwrap();
         unwrapped[0] = extension;
         unwrapped[1] = moduleFinder;
         moduleFinder = (StaticObject) meta.java_lang_module_ModuleFinder_compose.invokeDirect(StaticObject.NULL, moduleFinderArray);
@@ -95,10 +107,19 @@ public class Target_jdk_internal_module_SystemModuleFinders {
     private static StaticObject getEspressoModulePath(Meta meta, String jarName) {
         Path espressoHome = HomeFinder.getInstance().getLanguageHomes().get(EspressoLanguage.ID);
         Path hotswapJar = espressoHome.resolve("lib").resolve(jarName);
-        // Paths.get(new File("the path").toURI());
-        StaticObject file = InterpreterToVM.newObject(meta.java_io_File, false);
-        meta.java_io_File_init.invokeDirect(file, meta.toGuestString(hotswapJar.toFile().getAbsolutePath()));
-        StaticObject uri = (StaticObject) meta.java_io_File_toURI.invokeDirect(file);
-        return (StaticObject) meta.java_nio_file_Paths_get.invokeDirect(StaticObject.NULL, uri);
+        // Paths.get(guestPath);
+        StaticObject guestPath = meta.toGuestString(hotswapJar.toFile().getAbsolutePath());
+        StaticObject emptyArray = meta.java_nio_file_Path.allocateReferenceArray(0);
+        return (StaticObject) meta.java_nio_file_Paths_get.invokeDirect(StaticObject.NULL, guestPath, emptyArray);
+    }
+
+    private static class ModuleExtension {
+        private final String name;
+        private final Function<Meta, Boolean> isEnabled;
+
+        ModuleExtension(String name, Function<Meta, Boolean> isEnabled) {
+            this.name = name;
+            this.isEnabled = isEnabled;
+        }
     }
 }
